
        BOOKKEEPER-500: Fencing doesn't work when restarting bookies. (sijie via ivank)

        BOOKKEEPER-520: BookieFailureTest hangs on precommit build (ivank via sijie)

        BOOKKEEPER-447: Bookie can fail to recover if index pages flushed before ledger flush acknowledged (ivank via sijie)
	BOOKKEEPER-520: BookieFailureTest hangs on precommit build (sijie via fpj, jira reopened)

	BOOKKEEPER-514: TestDeadLock hanging sometimes (ivank, sijie via fpj)

        BOOKKEEPER-524: Bookie journal filesystem gets full after SyncThread is terminated with exception (Matteo, fpj via sijie)

      hedwig-protocol:

        BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)

        BOOKKEEPER-468: Remove <echo> from protobuf generation in hedwig (ivank)

      hedwig-client:

        BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)

        BOOKKEEPER-320: Let hedwig cpp client could publish messages using Message object instead of string. (jiannan via ivank)

        BOOKKEEPER-371: NPE in hedwig hub client causes hedwig hub to shut down. (Aniruddha via sijie)

        BOOKKEEPER-392: Racey ConcurrentMap usage in java hedwig-client (Stu Hood via sijie)

        BOOKKEEPER-427: TestConcurrentTopicAcquisition hangs every so often (ivank)

        BOOKKEEPER-434: [Hedwig CPP Client] Delay resolving default host until necessary. (sijie via ivank)

        BOOKKEEPER-452: Rename ClientConfiguration multiplexing_enabled to subscription_connection_sharing_enabled (sijie via ivank)

        BOOKKEEPER-454: hedwig c++ tester script assumes sh is bash (ivank)

        BOOKKEEPER-470: Possible infinite loop in simple.SubscribeReconnectCallback (sijie via ivank)

        BOOKKEEPER-55: SubscribeReconnectRetryTask might retry subscription endlessly when another subscription is already successfully created previously (sijie via ivank)

      hedwig-server:
