@@ -645,33 +645,16 @@ public class LedgerHandle {
 
     }
 
-    void handleBookieFailure(final InetSocketAddress addr, final int bookieIndex) {
+    ArrayList<InetSocketAddress> replaceBookieInMetadata(final InetSocketAddress addr, final int bookieIndex)
+            throws BKException.BKNotEnoughBookiesException {
         InetSocketAddress newBookie;
-
-        LOG.debug("Handling failure of bookie: {} index: {}", addr, bookieIndex);
+        LOG.info("Handling failure of bookie: {} index: {}", addr, bookieIndex);
         final ArrayList<InetSocketAddress> newEnsemble = new ArrayList<InetSocketAddress>();
-        blockAddCompletions.incrementAndGet();
         final long newEnsembleStartEntry = lastAddConfirmed + 1;
 
         // avoid parallel ensemble changes to same ensemble.
         synchronized (metadata) {
-            if (!metadata.currentEnsemble.get(bookieIndex).equals(addr)) {
-                // ensemble has already changed, failure of this addr is immaterial
-                LOG.warn("Write did not succeed to {}, bookieIndex {}, but we have already fixed it.",
-                         addr, bookieIndex);
-                blockAddCompletions.decrementAndGet();
-                return;
-            }
-
-            try {
-                newBookie = bk.bookieWatcher
-                        .getAdditionalBookie(metadata.currentEnsemble);
-            } catch (BKNotEnoughBookiesException e) {
-                LOG.error("Could not get additional bookie to "
-                        + "remake ensemble, closing ledger: " + ledgerId);
-                handleUnrecoverableErrorDuringAdd(e.getCode());
-                return;
-            }
+            newBookie = bk.bookieWatcher.getAdditionalBookie(metadata.currentEnsemble);
 
             newEnsemble.addAll(metadata.currentEnsemble);
             newEnsemble.set(bookieIndex, newBookie);
@@ -684,10 +667,34 @@ public class LedgerHandle {
 
             metadata.addEnsemble(newEnsembleStartEntry, newEnsemble);
         }
+        return newEnsemble;
+    }
 
-        EnsembleInfo ensembleInfo = new EnsembleInfo(newEnsemble, bookieIndex,
-                addr);
-        writeLedgerConfig(new ChangeEnsembleCb(ensembleInfo));
+    void handleBookieFailure(final InetSocketAddress addr, final int bookieIndex) {
+        blockAddCompletions.incrementAndGet();
+
+        synchronized (metadata) {
+            if (!metadata.currentEnsemble.get(bookieIndex).equals(addr)) {
+                // ensemble has already changed, failure of this addr is immaterial
+                LOG.warn("Write did not succeed to {}, bookieIndex {}, but we have already fixed it.",
+                         addr, bookieIndex);
+                blockAddCompletions.decrementAndGet();
+                return;
+            }
+
+            try {
+                ArrayList<InetSocketAddress> newEnsemble = replaceBookieInMetadata(addr, bookieIndex);
+
+                EnsembleInfo ensembleInfo = new EnsembleInfo(newEnsemble, bookieIndex,
+                                                             addr);
+                writeLedgerConfig(new ChangeEnsembleCb(ensembleInfo));
+            } catch (BKException.BKNotEnoughBookiesException e) {
+                LOG.error("Could not get additional bookie to "
+                          + "remake ensemble, closing ledger: " + ledgerId);
+                handleUnrecoverableErrorDuringAdd(e.getCode());
+                return;
+            }
+        }
     }
 
     // Contains newly reformed ensemble, bookieIndex, failedBookieAddress
@@ -819,7 +826,7 @@ public class LedgerHandle {
 
     };
 
-    private void unsetSuccessAndSendWriteRequest(final int bookieIndex) {
+    void unsetSuccessAndSendWriteRequest(final int bookieIndex) {
         for (PendingAddOp pendingAddOp : pendingAddOps) {
             pendingAddOp.unsetSuccessAndSendWriteRequest(bookieIndex);
         }
